# news-agg

./: .env.example  .gitignore  .pre-commit-config.yaml  PROPOSAL.md  README.md  alembic.ini  api_models.py  app.py  main.py  pyproject.toml  pytest.ini  requirements-api.txt  requirements.txt  tmp.py
.config/: settings.json
alembic/: env.py
src/: __init__.py
src/core/: __init__.py  config.py  database.py  models.py  repository.py
src/core/repositories/: __init__.py  article_repository.py  base.py  daily_summary_repository.py  exceptions.py  feed_repository.py  news_repository.py  statistics_repository.py
src/services/: __init__.py  ai_summarizer.py  content_scraper.py  feed_manager.py
src/ui/: __init__.py  article_display.py  feed_management.py  la_une.py
src/utils/: __init__.py
tests/: README.md  conftest.py  requirements-test.txt  test_ai_summarizer.py  test_config.py  test_content_scraper.py  test_feed_manager.py  test_integration.py  test_repository.py
